# ai-history-hackathon

./: DESIGN_REVAMP.md  README.md  modal.py  prompt.md
backend/: .env.example  README.md  doc_summary_processed.txt  embed_processed.txt  ocr_processed.txt  pyproject.toml
backend/OCRd/: British Military Administration, Malaya. Monetary and fiscal guide for Malaya__CO273:675:2.txt  Claims against Malayan Government. C. H. Young & Co.__CO273:670:5.txt  Claims against Malayan Government. Gammon (Malaya) Ltd.__CO273:670:1.txt  Claims against Malayan Government. Grindlay & CO Ltd.__CO273:670:7.txt  Claims against Malayan Government. Mr. J. Pascheove__CO273:670:8.txt  Claims against Malayan Government. William Jacks & CO Ltd.__CO273:670:2.txt  Colonial Development Fund Schemes quarterly progress reports and financial statements__CO273:655:7.txt  Evacuation of civil population__CO 273:669:6.txt  Evacuation of civil population__CO273:669:6.txt  Future Policy in Malaya. Composition of Governor's Advisory Council__CO273:675:15.txt  Future Policy in Malaya. Discussions with and views of prominent 4 Malayans__CO273:676:4.txt  Future Policy in Malaya. Military lands reservation__CO273:676:5.txt  Future Policy in Malaya. Progress in legislation for change-over to civil government__CO273:676:3.txt  Municipalities of Singapore, Penang and Malacca accounts__CO273:673:5.txt  Petitions. Ceylonese community in Malaya__CO273:660:7.txt  Petitions. Che Saffiah binti Laxamana Mohamed Amin__CO273:660:2.txt  Petitions. Gazetted officers of the Malayan Police Service__CO273:660:6.txt  (+14 more)
(+206 files in other folders)
